feat: use publishing for the process

--- a/docs/00_intro/00_intro.mdx
+++ b/docs/00_intro/00_intro.mdx
@@ -60,8 +60,8 @@ To enable fully digital workflows in chemistry, the development and provision of
 
 <IntroButton url={"/docs/smartlab"} imgUrl={"/img/nfdi4chem_SmartLab.svg"} text={"Smartlab"} />
 
-### Data Publication
+### Data Publishing
 
-In the category of data publication you will find all the important information on the topic of data publication. This includes the motivation to publish research data, paths to publish data, recommendations for research data repositories to be used, best practices and aspects of machine actionability.  
+In this category on data publishing you will find all the important information on the topic of data publishing. This includes the motivation to publish research data, paths to publish data, recommendations for research data repositories to be used, best practices and aspects of machine actionability.  
 
-<IntroButton url={"/docs/data_publication"} imgUrl={"/img/nfdi4chem_Data_Publication.svg"} text={"Data Publication"} />
+<IntroButton url={"/docs/data_publishing"} imgUrl={"/img/nfdi4chem_Data_Publication.svg"} text={"Data Publishing"} />
