--- a/docs/00_intro/20_data_life_cycle.mdx
+++ b/docs/00_intro/20_data_life_cycle.mdx
@@ -43,8 +43,8 @@ Before sharing data, you should check whether the data is subject to **copyright
 During this exchange and the associated reflections on the data, you should think about archiving and using the data in scientific publications. If you are not aware of any **criteria for archiving** and no criteria are specified in your working group or institute, decision-making guides such as the [“5 steps to decide what data to keep”](https://www.dcc.ac.uk/guidance/how-guides/five-steps-decide-what-data-keep)  outlined by the DCC can help. Based on the established criteria, it is determined which of the collected raw data should be archived and which should be deliberately deleted.
 
 In addition to the criteria, the migration of the data into **suitable [formats](/docs/format_standards) and onto suitable media** is important for archiving the data. In this step, the data should again be enriched with metadata so that it can be understood in the future without further knowledge about the data.
-In addition to archiving, the [publication](/docs/data_publication) of the data plays a special role. Many research funders expect the data to be published if there are no special reasons not to do so, such as a non-disclosure agreement or the inclusion of personal data. A **chemistry-specific or chemistry-related [repository](/docs/repositories)** such as the [Chemotion Repository](https://www.chemotion-repository.net/), [NOMAD](https://nomad-lab.eu/services/repo-arch), or [MassBank](https://massbank.eu/MassBank/)  is recommended for the publication of data. An overview of repositories can be found, for example, at [re3data.org](https://www.re3data.org/) or [fairsharing.org](https://fairsharing.org/). re3data.org allows you to filter repositories according to certain criteria such as the assignment of a persistent identifier or access.
-Data publication often takes place at certain milestones, for example, in combination with a text publication or at the end of a project. The **final version of the data management plan** is also required at the end of a project.
+In addition to archiving, the [publication](/docs/data_publishing) of the data plays a special role. Many research funders expect the data to be published if there are no special reasons not to do so, such as a non-disclosure agreement or the inclusion of personal data. A **chemistry-specific or chemistry-related [repository](/docs/repositories)** such as the [Chemotion Repository](https://www.chemotion-repository.net/), [NOMAD](https://nomad-lab.eu/services/repo-arch), or [MassBank](https://massbank.eu/MassBank/)  is recommended for the publication of data. An overview of repositories can be found, for example, at [re3data.org](https://www.re3data.org/) or [fairsharing.org](https://fairsharing.org/). re3data.org allows you to filter repositories according to certain criteria such as the assignment of a persistent identifier or access.
+Data publishing often takes place at certain milestones, for example, in combination with a text publication or at the end of a project. The **final version of the data management plan** is also required at the end of a project.
 
 ## Phase 6: Re-use
 
