--- a/docs/10_domains/20_physical_chemistry.mdx
+++ b/docs/10_domains/20_physical_chemistry.mdx
@@ -39,7 +39,7 @@ Physical chemistry is an interdisciplinary science at the frontier between chemi
 - obtained unprocessed raw files from measurements are uploaded to [ELN](/docs/eln) in open file formats and attached directly to the respective [ELN](/docs/eln) experiment entry, including metadata with data on the instrument (e.g. manufacturer, type, etc.), measurement conditions & parameters
 - [metadata](/docs/metadata) related to the obtained data, such as temperature or solvent of measurement, follow common [metadata standards](/docs/metadata)
 - research data are processed, analysed and compared with open non-proprietary software tools
-- simultaneously with [publication](/docs/data_publication) as a research article in a scientific journal, the underlying research data is published in an open data [repository](/docs/repositories) and linked to the article (incl. semantically richly annotated raw and processed data in open data formats for reuse)
+- simultaneously with [publication](/docs/data_publishing) as a research article in a scientific journal, the underlying research data is published in an open data [repository](/docs/repositories) and linked to the article (incl. semantically richly annotated raw and processed data in open data formats for reuse)
 - an unique [persistent identifier](/docs/pid) (e.g. DOI) is generated for each dataset as well as for the journal publication
 
 ## Quantum Mechanical (QM) calculations
@@ -62,7 +62,7 @@ Physical chemistry is an interdisciplinary science at the frontier between chemi
 - reproducibility of calculations to within numerical accuracy can be ensured by storing the input files and adding the program and its version (ideally even the compiler version and any compiler flags) as metadata. Numerical thresholds are well defined but reproducibility of calculations across different programs and versions is not guaranteed. This warrants the safekeeping of version specific source files for the same time period as the stored data
 - data analysis scripts should be uploaded to the repository in open file formats, attached directly to the corresponding data entry and accompanied with appropriate documentation
 - if possible, analysis and evaluation of calculations should be conducted with open, non-proprietary software tools
-- simultaneously with [publication](/docs/data_publication) as a research article in a scientific journal, the data in the [repository](/docs/repositories) is linked to the article (incl. semantically richly annotated raw and processed data, if possible in open data formats for reuse)
+- simultaneously with [publication](/docs/data_publishing) as a research article in a scientific journal, the data in the [repository](/docs/repositories) is linked to the article (incl. semantically richly annotated raw and processed data, if possible in open data formats for reuse)
 - a unique [persistent identifier](/docs/pid) (e.g. DOI) is generated for the dataset as well as for the journal publication
 - XML and CML (Chemical Markup Language) is used by a few software packages but this is not common practice
 
@@ -89,7 +89,7 @@ Physical chemistry is an interdisciplinary science at the frontier between chemi
 - [documentation of all research data](/docs/data_documentation) and [metadata](/docs/metadata) is carried out digitally using a suitable repository to store the data
 - reproducibility of calculations can be ensured by storing the input file and adding the program and its version (ideally including the compiler and any compiler flags) as metadata
 - if possible, analysis and evaluation of calculations should be conducted with open non-proprietary software tools
-- simultaneously with [publication](/docs/data_publication) as a research article in a scientific journal, the data in the [repository](/docs/repositories) is linked to the article (incl. semantically richly annotated raw and processed data, if possible in open data formats for reuse)
+- simultaneously with [publication](/docs/data_publishing) as a research article in a scientific journal, the data in the [repository](/docs/repositories) is linked to the article (incl. semantically richly annotated raw and processed data, if possible in open data formats for reuse)
 - a unique [persistent identifier](/docs/pid) (e.g. DOI) is generated for each dataset as well as for the journal publication
 
 ### Challenges to make data FAIR
