--- a/docs/20_role/30_student.mdx
+++ b/docs/20_role/30_student.mdx
@@ -29,7 +29,7 @@ For the [documentation of these data](/docs/data_documentation), a classic paper
 :::
 
 :::caution Considerations:
-The use of a paper-based lab journal seems to be an easy and efficient way to [document data](/docs/data_documentation). But the use of an [ELN](/docs/eln) like [Chemotion](https://www.chemotion.net/chemotionsaurus/index.html) has plenty of advantages in the long run. For example, in [Chemotion](https://www.chemotion.net/chemotionsaurus/index.html) all data obtained from an experiment can be linked to your protocol, which is an easy way to have a [well-organised research data set](/docs/data_organisation) at the end of the thesis. Additionally, the reaction protocol can be exported in a [standardised form](/docs/format_standards), which is suitable for [publication](/docs/data_publication) in the experimental section of a thesis or a paper. <br/> Furthermore, the data are machine readable and therefore easily findable which is one aspect for [FAIR data](/docs/fair) (**F**indable, **A**ccessible, **I**nteroperable, **R**eusable). Also the other aspects should be fulfilled, this increases the machine-actionability for future use of the data. Another advantage of an [ELN](/docs/eln) is that it can be coupled with a [repository](/docs/repositories), which will ease the [publication process](/docs/data_publication). [Choose a repository](/docs/choose_repository), that is suitable for your data.
+The use of a paper-based lab journal seems to be an easy and efficient way to [document data](/docs/data_documentation). But the use of an [ELN](/docs/eln) like [Chemotion](https://www.chemotion.net/chemotionsaurus/index.html) has plenty of advantages in the long run. For example, in [Chemotion](https://www.chemotion.net/chemotionsaurus/index.html) all data obtained from an experiment can be linked to your protocol, which is an easy way to have a [well-organised research data set](/docs/data_organisation) at the end of the thesis. Additionally, the reaction protocol can be exported in a [standardised form](/docs/format_standards), which is suitable for [publication](/docs/data_publishing) in the experimental section of a thesis or a paper. <br/> Furthermore, the data are machine readable and therefore easily findable which is one aspect for [FAIR data](/docs/fair) (**F**indable, **A**ccessible, **I**nteroperable, **R**eusable). Also the other aspects should be fulfilled, this increases the machine-actionability for future use of the data. Another advantage of an [ELN](/docs/eln) is that it can be coupled with a [repository](/docs/repositories), which will ease the [publication process](/docs/data_publishing). [Choose a repository](/docs/choose_repository), that is suitable for your data.
 :::
 
 
@@ -44,7 +44,7 @@ Data can be processed by different software for each method. But an [ELN](/docs/
 :::
 
 :::caution Considerations:
-By [documenting](/docs/data_documentation) and processing data in the same software tool synergies will be obtained. For example Chemspectra can control automatically, if the integral of the NMR spectra fits to the target molecule of the connected synthesis. After processing your data in Chemspectra you can export your data in a standardised peak list, which can be added in the experimental section of a thesis or a [publication](/docs/data_publication).
+By [documenting](/docs/data_documentation) and processing data in the same software tool synergies will be obtained. For example Chemspectra can control automatically, if the integral of the NMR spectra fits to the target molecule of the connected synthesis. After processing your data in Chemspectra you can export your data in a standardised peak list, which can be added in the experimental section of a thesis or a [publication](/docs/data_publishing).
 :::
 
 
