--- a/docs/20_role/40_data_steward.mdx
+++ b/docs/20_role/40_data_steward.mdx
@@ -13,7 +13,7 @@ From this definition, it follows that a data steward is concerned with, in broad
 
 ## Tasks and Skills
 
-A data steward's task can take on various forms, often depending on the exact position within the organization and the individual's personal skill set and background. The duties may involve defining appropriate [repositories](/docs/repositories) for [data publication](/docs/data_publication), consulting on [data formats](/docs/format_standards) and [metadata](/docs/metadata) standards, setting up data documentation and metadata management systems, e.g. through an [electronic laboratory notebook (ELN)](/docs/eln), and training researchers on [best practices](/docs/best_practice). The [Engaging Researchers with Data Management: The Cookbook](https://www.openbookpublishers.com/product/1080) elaborates on the various tasks and skills for the role of data steward. In it, Alastair Dunning, the Head of
+A data steward's task can take on various forms, often depending on the exact position within the organization and the individual's personal skill set and background. The duties may involve defining appropriate [repositories](/docs/repositories) for [data publishing](/docs/data_publishing), consulting on [data formats](/docs/format_standards) and [metadata](/docs/metadata) standards, setting up data documentation and metadata management systems, e.g. through an [electronic laboratory notebook (ELN)](/docs/eln), and training researchers on [best practices](/docs/best_practice). The [Engaging Researchers with Data Management: The Cookbook](https://www.openbookpublishers.com/product/1080) elaborates on the various tasks and skills for the role of data steward. In it, Alastair Dunning, the Head of
 Research Data Services at TU Delft, is quoted saying:
 
 > “Interpersonal skills are key to the success of the Data Steward.”
@@ -28,7 +28,7 @@ Recently, a [BMBF](https://www.bmbf.de/bmbf/de/home/home_node.html)-funded proje
 
 ### Data Stewards in Chemistry
 
-Chemical research is often a combination of observational data and digital data. While the focus in RDM and data stewardship typically lies on the latter—as emphasized in the definition quoted at the beginning of this article—the oberservational aspect cannot be ignored. Traditionally, this information is recorded in hand-written lab journals. Here, data stewards must understand the type of laboratory work carried out and assist in selecting appropriate ELNs to digitize this type of information. For digital data, data stewards must be aware of community-specific standards for data formats and [minimum information (MI) regarding metadata](/docs/metadata) . With this knowledge, they can assist in efficiently implementing data workflows that automate data transfer from device to secure storage locations, data format conversions, and metadata annotation. For example, [Chemotion ELN's device integration](https://www.chemotion.net/docs/eln/devices) can facilitate such workflows, while directly connecting the data to molecules and reactions recorded in the ELN. Such processes allow for a well-documented [dataset to be published](/docs/data_publication) in [repositories](/docs/repositories) alongside the results reported in journal articles.
+Chemical research is often a combination of observational data and digital data. While the focus in RDM and data stewardship typically lies on the latter—as emphasized in the definition quoted at the beginning of this article—the oberservational aspect cannot be ignored. Traditionally, this information is recorded in hand-written lab journals. Here, data stewards must understand the type of laboratory work carried out and assist in selecting appropriate ELNs to digitize this type of information. For digital data, data stewards must be aware of community-specific standards for data formats and [minimum information (MI) regarding metadata](/docs/metadata) . With this knowledge, they can assist in efficiently implementing data workflows that automate data transfer from device to secure storage locations, data format conversions, and metadata annotation. For example, [Chemotion ELN's device integration](https://www.chemotion.net/docs/eln/devices) can facilitate such workflows, while directly connecting the data to molecules and reactions recorded in the ELN. Such processes allow for a well-documented [dataset to be published](/docs/data_publishing) in [repositories](/docs/repositories) alongside the results reported in journal articles.
 
 ## Networking and Continuous Training
 
