--- a/docs/30_data/00_data_guide.mdx
+++ b/docs/30_data/00_data_guide.mdx
@@ -41,7 +41,7 @@ Storing and and archiving your data needs to be carefully considered. How many c
 
 Want to make your data available to others? Not quite sure how or where to publish your data? Find out more:
 
-<IntroButton url={"/docs/data_publication"} imgUrl={"/img/nfdi4chem_Data_Publication.svg"} text={"Data Publication"} />
+<IntroButton url={"/docs/data_publishing"} imgUrl={"/img/nfdi4chem_Data_Publication.svg"} text={"Data Publication"} />
 
 ### How to choose the right repository
 
