--- a/docs/50_data_publication/20_choose_repository.mdx
+++ b/docs/50_data_publication/20_choose_repository.mdx
@@ -20,7 +20,7 @@ The consortium for chemistry (NFDI4Chem) within the NFDI aims to support researc
 The repositories that fulfil the above-mentioned criteria are reported in the following list as **core repositories**. Cases that do not meet all criteria are included as associated or relevant repositories, supplementing the following list of recommended and trusted, chemistry-friendly repositories.
 
 :::danger Notice:
-Field-specific repositories should be the first choice as these repositories enhance the FAIRness of data on behalf of the submitters. To retain the same level of FAIRness, data publication in generic repositories requires manual FAIRification.
+Field-specific repositories should be the first choice as these repositories enhance the FAIRness of data on behalf of the submitters. To retain the same level of FAIRness, data publishing in generic repositories requires manual FAIRification.
 :::
 
 ## Core repositories
@@ -83,7 +83,7 @@ The recommendations provided in Table 1 will guide you to efficiently and quickl
 | Organic, inorganic and metal-organic crystal structure data                                               | primarily Crystallographic Information File (CIF) but other supporting file formats accepted                                                                                                                                                                                                                                                | [joint CCDC/FIZ Access Structures ServiceD](https://www.ccdc.cam.ac.uk/structures//) | At least one CIF file must be included in the submission and structure factor data for all structures should be provided (if possible) |
 | Simulation                                                                                                | [50 supported codes](https://nomad-lab.eu/prod/v1/gui/about/information)                                                                                                                                                                                                                                                                    | [NOMAD](https://nomad-lab.eu/)                                                       | Simulation data Recognition during upload                                                                                              |
 | Generic data from all disciplines of chemistry, all data that do not fit in the disciplinary repositories | format-independent                                                                                                                                                                                                                                                                                                                          | [RADAR4Chem](https://www.radar-service.eu/de)                                        | Validation against metadata schema                                                                                                     |
-| Enzyme kinetics data                                                                                      | currently none                                                                                                                                                                                                                                                                                                                              | [STRENDA DB](https://www.beilstein-strenda-db.org/strenda//)                         | None; STRENDA compliant, peer-reviewed data publication                                                                                |
+| Enzyme kinetics data                                                                                      | currently none                                                                                                                                                                                                                                                                                                                              | [STRENDA DB](https://www.beilstein-strenda-db.org/strenda//)                         | None; STRENDA compliant, peer-reviewed data publishing                                                                                |
 | Intermolecular and supramolecular interactions of molecular systems                                       | JSON (DataCite), CDX\* (for 2D/3D molecule structure), PNG, proprietary formats                                                                                                                                                                                                                                                             | [Suprabank](https://suprabank.org/)                                                  | Non-judgmental plausibility                                                                                                            |
 
 ## Brief description of repositories
