--- a/docs/50_data_publication/70_publication_standards.mdx
+++ b/docs/50_data_publication/70_publication_standards.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Publication Standards"
-slug: "/publication_standards"
+title: "Publishing Standards"
+slug: "/publishing_standards"
 ---
 
 ![Under Construction](/img/Constr_2bl.png)
