--- a/docs/10_domains/10_analytical_chemistry.mdx
+++ b/docs/10_domains/10_analytical_chemistry.mdx
@@ -79,9 +79,9 @@ A typical workflow begins with the conceptualisation of the research question, a
 - A detailed view, evaluation and interpretation of results is carried out with the Chemotion ELN features.
 
 
-## Publication of research data
+## Publishing research data
 
-- In addition to a research article in a scientific journal, the underlying research data are [published](/docs/data_publication) in a [repository](/docs/repositories) and linked to the article to realise research data management according to the [FAIR data principles](/docs/fair) ([Best practice examples](/docs/best_practice)).
-- Data publication in a repository includes raw and processed data for reuse.
+- In addition to a research article in a scientific journal, the underlying research data are [published](/docs/data_publishing) in a [repository](/docs/repositories) and linked to the article to realise research data management according to the [FAIR data principles](/docs/fair) ([Best practice examples](/docs/best_practice)).
+- Data publications in repositories include raw and processed data for reuse.
 - The use of the [Chemotion ELN](https://www.chemotion.net/chemotionsaurus/index.html) enables a direct transfer of research data and the respective metadata to the [Chemotion Repository](https://www.chemotion-repository.net/welcome). Subsequently, these data are automatically shared with other repositories, e.g. [PubChem](https://pubchem.ncbi.nlm.nih.gov/). For the publication of research data in other discipline-specific repositories, such as the [MassBank](https://massbank.eu/MassBank/) for reference mass spectra, data have to be exported from the Chemotion ELN and submitted to the respective database.
-- A [persistent identifier](/docs/pid) (e.g., DOI) is generated for a dataset by a repository (e.g., [DataCite](https://datacite.org/) for the Chemotion Repository), which is given in the journal publication or corresponding supporting information to link the data publication with the manuscript.
+- A [persistent identifier](/docs/pid) (e.g., DOI) is generated for a dataset by a repository (e.g., [DataCite](https://datacite.org/) for the Chemotion Repository), which is given in the journal article or corresponding supporting information to link the data publication with the manuscript.
