--- a/docs/20_role/10_research_group_leader.mdx
+++ b/docs/20_role/10_research_group_leader.mdx
@@ -13,7 +13,7 @@ This article applies to research group leaders, who plan to organise the RDM of 
 
 <img id="datalife" alt="Data LifeCycle" src={useBaseUrl('/img/Intro/DataLifeCycle_KB.svg')} width="500" align="right" vspace="10" hspace="10" />
 
-As research group leader, you are responsible for the [research data organisation](/docs/data_organisation) of your group. Many research institutions and also most funding institutions require or give internal RDM guidelines (e.g. [DFG checklist](https://www.dfg.de/download/pdf/foerderung/grundlagen_dfg_foerderung/forschungsdaten/forschungsdaten_checkliste_de.pdf), BMBF, EU guidelines) and recommend the set-up of [data management plans](/docs/dmp) in order to ensure that the data are archived in a [FAIR](/docs/fair) (**F**indable, **A**ccessible, **I**nteroperable, **R**e-usable) manner. Many funding institutions encourage or even enforce the [publication](/docs/data_publication) of FAIR data.
+As research group leader, you are responsible for the [research data organisation](/docs/data_organisation) of your group. Many research institutions and also most funding institutions require or give internal RDM guidelines (e.g. [DFG checklist](https://www.dfg.de/download/pdf/foerderung/grundlagen_dfg_foerderung/forschungsdaten/forschungsdaten_checkliste_de.pdf), BMBF, EU guidelines) and recommend the set-up of [data management plans](/docs/dmp) in order to ensure that the data are archived in a [FAIR](/docs/fair) (**F**indable, **A**ccessible, **I**nteroperable, **R**e-usable) manner. Many funding institutions encourage or even enforce the [publication](/docs/data_publishing) of FAIR data.
 
 In recent years, many new digital tools have been developed to support researchers in their RDM needs. The technical possibilities are briefly outlined below. For more details, please refer to the related chapters, many of which are directly linked.
 
@@ -21,7 +21,7 @@ In recent years, many new digital tools have been developed to support researche
 Digitisation of research data only **after** the end of the production process is most tedious and time-consuming.
 :::
 
-Therefore, it is more efficient to capture the data and their corresponding [metadata](/docs/metadata) as early as from the planning of the experiment. Here, [electronic lab notebooks (ELN)](/docs/eln) facilitate everyday work considerably: the planning of the experiment, the documentation of experimental procedures, the analysis of the obtained spectroscopic data as well as the peak assignment can all be completed in one digital environment. And even better: complete experiment reports with analytical data (e.g. for the supporting information for [publications](/docs/data_publication)) can be generated automatically by the ELN.
+Therefore, it is more efficient to capture the data and their corresponding [metadata](/docs/metadata) as early as from the planning of the experiment. Here, [electronic lab notebooks (ELN)](/docs/eln) facilitate everyday work considerably: the planning of the experiment, the documentation of experimental procedures, the analysis of the obtained spectroscopic data as well as the peak assignment can all be completed in one digital environment. And even better: complete experiment reports with analytical data (e.g. for the supporting information for [publications](/docs/data_publishing)) can be generated automatically by the ELN.
 
 The time invested to set up the ELN and to organise the experiments thus pays off in numerous ways: In addition to facilitating [documentation](/docs/data_documentation), the storage of the produced data in a FAIR format in a [repository](/docs/repositories) is simplified. Also, the [data organisation](/docs/data_organisation) for the research group can be improved by setting up an internal database. This is invaluable for growing working groups.
 
