--- a/docs/50_data_publication/00_data_publishing.mdx
+++ b/docs/50_data_publication/00_data_publishing.mdx
@@ -1,12 +1,12 @@
 ---
-title: "Data Publication"
-slug: "/data_publication"
-id: "data_publication"
+title: "Data Publishing"
+slug: "/data_publishing"
+id: "data_publishing"
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl';
 
-# Data Publication
+# Data Publishing
 
 :::info Applies to:
 This page applies to all researchers who want to publish their data.
@@ -18,7 +18,7 @@ In chemical research, we strive to share results with others, commonly through a
 
 Publishing and therefore sharing these chemistry research data in a [FAIR](/docs/fair) manner by considering aspects such as [persistent identifiers](/docs/pid/), rich [metadata](/docs/metadata), [provenance information](/docs/provenance/), [data formats standards](/docs/format_standards) for analytical data, information on the [license](/docs/licenses/) applied, and by providing [machine-readable chemical structures](/docs/machine-readable_chemical_structures) adds value to the research results and enables discovery and reuse. 
 
-Publication of data is essential to ensure that findings are transparent and reproducible. Moreover, it prevents duplicate efforts to generate data, hence, data publishing is also a measure of sustainability.
+To publish data is essential to ensure that findings are transparent and reproducible. Moreover, it prevents duplicate efforts to generate data, hence, data publishing is also a measure of sustainability.
 
 ## Benefits of data publishing
 
@@ -28,7 +28,7 @@ There are direct benefits for researchers who publish their data. Data publicati
 
 (Source: Brian Hole, [CC BY 4.0](https://creativecommons.org/licenses/by/4.0/), [Slideshare](https://www.slideshare.net/brianhole/the-journal-of-open-archaeology-data-and-prime-incentivising-open-data-archiving))
 
-Additionally, the research community benefits here as, for example, new research is made possible and efficiency in research increases. Also the public sector will profit by enhanced public trust in science, as data publication allows for the validation of research results. Nonetheless, the publication of data is of economic benefit if the results can be reused by the private sector.
+Additionally, the research community benefits here as, for example, new research is made possible and efficiency in research increases. Also the public sector will profit by enhanced public trust in science, as data publishing allows for the validation of research results. Nonetheless, the publication of data is also of economic benefit if the results can be reused by the private sector.
 
 ## How to start
 
