--- a/docs/50_data_publication/80_data_articles.mdx
+++ b/docs/50_data_publication/80_data_articles.mdx
@@ -15,7 +15,7 @@ Research data can be published in [research data repositories](/docs/repositorie
 
 ## How to start
 
-Several journals have added some form of data articles to their article types. Moreover, entire journals dedicated to publication of data articles have been created such as [Scientific Data](https://www.nature.com/sdata/) by Nature Research [Data](https://www.mdpi.com/journal/data) by MDPI or Elsevier's [Research Elements journals](https://www.elsevier.com/authors/tools-and-resources/research-elements-journals).  
+Several journals have added some form of data articles to their article types. In addition, entire journals have been created to publish data articles such as [Scientific Data](https://www.nature.com/sdata/) by Nature Research [Data](https://www.mdpi.com/journal/data) by MDPI or Elsevier's [Research Elements journals](https://www.elsevier.com/authors/tools-and-resources/research-elements-journals).  
 
 The first step is to determine whether the data set(s) meet the criteria to pass the review process of the journals. In case the data shall be published in conjunction with an original research article, it has to be determined whether the editorial policy is compatible with a separate data publication. Here, the author guidelines or a brief email to the editorial contact can provide an answer. 
 
