--- a/docs/30_data/00_data_guide.mdx
+++ b/docs/30_data/00_data_guide.mdx
@@ -37,11 +37,11 @@ Storing and and archiving your data needs to be carefully considered. How many c
 
 <IntroButton url={"/docs/data_storage"} imgUrl={"/img/nfdi4chem_Data_Storage_and_Archiving.svg"} text={"Data Storage and Archiving"} />
 
-### Data Publication
+### Data Publishing
 
 Want to make your data available to others? Not quite sure how or where to publish your data? Find out more:
 
-<IntroButton url={"/docs/data_publishing"} imgUrl={"/img/nfdi4chem_Data_Publication.svg"} text={"Data Publication"} />
+<IntroButton url={"/docs/data_publishing"} imgUrl={"/img/nfdi4chem_Data_Publication.svg"} text={"Data Publishing"} />
 
 ### How to choose the right repository
 
