feat: one sentence on nmrXiv

--- a/docs/50_data_publication/20_choose_repository.mdx
+++ b/docs/50_data_publication/20_choose_repository.mdx
@@ -27,7 +27,7 @@ Field-specific repositories should be the first choice as these repositories enh
 
 -   [Chemotion Repository](https://www.chemotion-repository.net/welcome)<br/>Field-specific sample and reaction-centric repository including analysis data such as NMR, IR, and mass data.
 -   [MassBank EU](https://massbank.eu/MassBank/)<br/>Field-specific ecosystem of databases and tools for mass spectrometry reference spectra.
--   [nmrXiv](https://docs.nmrxiv.org/) (NMR data)
+-   [nmrXiv](https://docs.nmrxiv.org/)<br/>A field-specific repository for NMR data.
 -   [RADAR4Chem](https://www.nfdi4chem.de/index.php/2650-2/)<br/>Generic, multi-domain repository that offers a free and reliable home for all chemical research data that do not fulfil the specifications of field-specific repositories.
 -   [STRENDA DB](https://www.beilstein-strenda-db.org/)<br/>Field-specific repository for enzymology data, which incorporates the STRENDA Guidelines for reporting enzymology data.
 -   [SUPRABANK](https://suprabank.org/)<br/>Field-specific repository for intermolecular interactions data.
