--- a/docs/00_intro/10_fair.mdx
+++ b/docs/00_intro/10_fair.mdx
@@ -144,5 +144,5 @@ Where required, format converters should be linked in the dataset’s metadata.
 - [FORCE 11: FAIR Data Principles](https://www.force11.org/group/fairgroup/fairprinciples)
 - [Go-FAIR initiative: FAIR Principles](https://www.go-fair.org/fair-principles/)
 - [TIB Blog: The FAIR Data Principles for Research Data](https://blogs.tib.eu/wp/tib/2017/09/12/the-fair-data-principles-for-research-data/)
-- [FAIRSFAIR: How to be FAIR with your data. A teaching and training handbook for higher education institutions](https://zenodo.org/record/5787046#.Yd_Emv7MKUn)
-- [Checklist: How FAIR are your data?](https://doi.org/10.5281/zenodo.1065991) [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.1065991.svg)](https://doi.org/10.5281/zenodo.1065991)
+- [FAIRsFAIR: How to be FAIR with your data. A teaching and training handbook for higher education institutions](https://doi.org/10.5281/zenodo.6674301) & [Engelhardt et al. (book version)](10.17875/gup2022-1915) & [Gitbook version](https://fairsfair.gitbook.io/fair-teaching-handbook)
+- [Checklist: How FAIR are your data?](https://doi.org/10.5281/zenodo.1065991) [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.1065991.svg)](https://doi.org/10.5281/zenodo.1065991) 
