--- a/docs/50_data_publication/51_lbe/00_lbe_intro.mdx
+++ b/docs/50_data_publication/51_lbe/00_lbe_intro.mdx
@@ -8,7 +8,7 @@ import IntroButton from '@site/src/components/IntroButton.js'
 
 NFDI4Chem has a clear vision of how chemistry research data will be collected, processed, archived, shared and published. The development of standards for metadata, minimum information, analytical data formats as well as publication standards includes sample datasets in a substantial standard-compliant manner.
 
-Herein we present representative as well as substantially complex real datasets from various subdisciplines of chemistry. These datasets were collected within NFDI4Chem, but also external contributions by early adopters via our [survey form](https://docs.google.com/forms/d/e/1FAIpQLSdd_4oNSM0Q4epJwxNU5zthL_0JroGSYl4ILMLR0G1Xo9YbRw/viewform) are listed, for which we provide support via a consulting service and data stewardship. 
+Herein we present representative as well as substantially complex real datasets from various subdisciplines of chemistry. These datasets were collected within NFDI4Chem, but also external contributions by early adopters are listed, for which we provide support via a consulting service and data stewardship.
 
 This collection also documents the process of evolving FAIRness of chemistry research data, surfaces practical issues and suggestions for improvements to be fed back to other projects within NFDI4Chem.
 
