fix: nicer arrows

--- a/docs/50_data_publication/70_publication_standards.mdx
+++ b/docs/50_data_publication/70_publication_standards.mdx
@@ -92,7 +92,7 @@ To uniquely and persistently identify themselves within the dataset's metadata, 
 
 In the case of RADAR4Chem the relationship would be described as follows:
 
-> relatedIdentifier ->  relatedIdentifierType:DOI -> relationType:IsPublishedIn -> http://doi.org/10.17616/R3ZX96
+> relatedIdentifier &rarr;  relatedIdentifierType:DOI &rarr; relationType:IsPublishedIn &rarr; http://doi.org/10.17616/R3ZX96
 
 This ensures humans as well as machines can trace and interpret where the data has been published.
 
