fix: small things and notes

--- a/docs/50_data_publication/70_publication_standards.mdx
+++ b/docs/50_data_publication/70_publication_standards.mdx
@@ -3,6 +3,8 @@ title: "Publication Standards"
 slug: "/publication_standards"
 ---
 
+<!--Note: see collection of standards: https://docs.google.com/document/d/1hcQb3A41twrY3mt5vF_axm5AQr2tdDsRnOjnQfw-rSo/edit?usp=sharing-->
+
 
 ![Under Construction](/img/Constr_2bl.png)
 
@@ -17,10 +19,10 @@ This page is under construction, while you are welcome to read the already exist
 During deposition of research data, a [persistent identifier (PID)](/docs/pid) is assigned to the data. Authors should use PIDs in their article for interlinking in two main ways:
 
 :::tip Standard
-*Authors should add the PID of the corresponding dataset(s) to the data availability statement. In addition, authors corresponding datasets to the references.*
-:::
+*Authors should add the PID of the corresponding dataset(s) to the data availability statement. In addition, authors should add corresponding datasets to the references, making them citable within the text of the article.* 
+::: 
 
-For corresponding data, i.e. directly underlying the results reported in the article, add the PID to the article's [data availability statement](/docs/data_availability_statement), or a similarly termed section. If you believe that your data publication is as decisive as the article itself, add your dataset to the references as well and cite within the text. <!--Vielleicht eher "In order to specifically reference your data within the text, add your dataset to the refernces as well. -->
+For corresponding data, i.e. data directly underlying the results reported in the article, add the PID to the article's [data availability statement](/docs/data_availability_statement), or a similarly termed section. If you believe that your data publication is as decisive as the article itself, add your dataset to the references as well and cite within the text.
 
 :::tip Standard
 *Authors should add PIDs to datasets by other researchers, which have been reused to the references rather than citing the corresponding article*
@@ -28,10 +30,8 @@ For corresponding data, i.e. directly underlying the results reported in the art
 
 For datasets published by other researchers and reused within a study, add the PID to the reference section of the manuscript and cite within the text accordingly.
 
-<!--Add note on relationType IsSupplementTo and IsSupplementedBy -->
-
 :::info Notice:
-This distinction is important, because the link to the dataset in the DOI metadata of scientific articles is differently set, depending on whether the dataset is a directly related source of information or a referenced source of other researchers and its information is reused.
+This distinction is important, because the link to the dataset in the DOI metadata of scientific articles is differently set, depending on whether the dataset is a directly related source of information or a referenced source by other researchers and its information has been reused.
 :::
 
 For a set of reactions, samples, and analyses, to assemble a study, Collection PIDs should be used rather than providing many separate PIDs. Such a study wrapped with a Collection PID can directly correspond to a published scientific article and can be referenced in a bundled manner within the [data availability statement](/docs/data_availability_statement) or references section.
