--- a/docs/50_data_publication/70_publication_standards.mdx
+++ b/docs/50_data_publication/70_publication_standards.mdx
@@ -34,7 +34,7 @@ For datasets published by other researchers and reused within a study, add the P
 This distinction is important, because the link to the dataset in the DOI metadata of scientific articles is differently set, depending on whether the dataset is a directly related source of information or a referenced source by other researchers and its information has been reused.
 :::
 
-For a set of reactions, samples, and analyses, to assemble a study, Collection PIDs should be used rather than providing many separate PIDs. Such a study wrapped with a Collection PID can directly correspond to a published scientific article and can be referenced in a bundled manner within the [data availability statement](/docs/data_availability_statement) or references section.
+For a set of reactions, samples, and analyses, to assemble a study, **Collection PIDs** should be used rather than providing many separate PIDs. Such a study wrapped with a Collection PID can directly correspond to a published scientific article and can be referenced in a bundled manner within the [data availability statement](/docs/data_availability_statement) or references section.
 
 In addition, but second-tier, the PID of a related dataset could also be mentioned in the supplementary PDF, if such a document is generated.
 
@@ -48,26 +48,31 @@ Many data repositories will offer the option to add a related identifier. Accord
 
 The below outlines a collection of standards for research data repositories. 
 
+---
+
 :::tip Standard
 *Research data repositories should provide a Collection DOI to wrap datasets corresponding to one study.*
 :::
 
 Research data repositories may use individual DOIs to reference individual chemical reactions, molecules, or analytical datasets. Thus, many DOIs will then be relevant to the published study results. In order to facilitate the manuscript submission process, a single DOI that wraps all relevant data should be available. Furthermore, this ensure all data underlying a published manuscript can be viewed and referenced as a single collection.
 
+---
+
 :::tip Standard
 *NFDI4Chem-supported research data repositories should contribute to Scholix.org (or a similar solution).*
 :::
 
-Scholix provides the framework for improving the links between scientific literature and research data as well as between data and data with the goal of providing high-level interoperability framework for exchanging information about these links. Thus, Scholix hubs, such as DataCite or OpenAire, contribute information on their metadata records, which contain information on connected digital objects.
+[**Scholix**](https://doi.org/10.1045/january2017-burton) provides the framework for improving the links between scientific literature and research data as well as between data and data with the goal of providing **high-level interoperability framework for exchanging information about these links**. Thus, Scholix hubs, such as [DataCite](https://datacite.org/) or [OpenAire](https://www.openaire.eu/), contribute information on their metadata records, which contain information on connected digital objects.
 
-<!--scholix.org links funktionieren alle momentan (bei mir zumindest) nicht-->
+---
 
 :::tip Standard
 *Datasets published with an embargo period should have inaccessible data but accessible metadata.*
 :::
 
-While an embargo period restricts access to a published dataset, the metadata should still be accessible. This allows relevant information on the dataset to be retrieved, while guaranteeing first rights to the data to the authors.
+While an embargo period restricts access to a published dataset, the **metadata should still be accessible**. This allows relevant information on the dataset to be retrieved and enables [FAIR](/docs/fair) ([A2](/docs/fair/#a2-metadata-are-accessible-even-when-the-data-are-no-longer-available)), while guaranteeing first rights to the data to the authors. 
 
+---
 <!--Standard on how to publish NMR data, tbd-->
 
 
@@ -75,73 +80,93 @@ While an embargo period restricts access to a published dataset, the metadata sh
 *URLs to access datasets under review should have the access credentials encoded in the URL.*
 :::
 
-Review links for datasets should have the access credentials encoded in the URL, rather than having separate login and password. This avoids having to forward these details to the reviewer via the submission system.
+**Review links** for datasets should have the **access credentials** encoded in the URL, rather than having separate login and password. This avoids having to forward these details to the reviewer via the submission system. 
+
+---
 
 :::tip Standard
 *Repositories should register a DOI and populate main fields such as creator and contributor, if a dataset is under review.*
 :::
 
-This ensures that journals may carry out automated quality control steps upon manuscript submission. Further details within the dataset's metadata and content may still be adjusted and updated before final publication.
+This ensures that journals may carry out automated **quality control steps upon manuscript submission**. Further details within the dataset's metadata and content may still be adjusted and updated prior to final publication.
 
-
-:::tip Standard
-*Research data repositories should provide the repository name as publisher in a dataset's metadata.*
-:::
-
+---
 
 :::tip Standard
-*Research data repositories should provide their repository identifier by re3data.org as a relatedIdentifier with relationType IsPublishedIn.*
+*Research data repositories should provide the repository name as `publisher` in a dataset's metadata.*
 :::
 
-To uniquely and persistently identify themselves within the dataset's metadata, repositories should provide repository identifier from re3data.org. These should be automatically populated metadata fields. If data has originally been published in another repository, the respective repository identifier should be used. The relationship is as follows.
+As stated by [**DataCite's documenation on the publisher field**](https://datacite-metadata-schema.readthedocs.io/en/4.5/properties/publisher/#publisher), this field is used to formulate the citation of the data and thus should be the repository name. 
 
-In the case of RADAR4Chem the relationship would be described as follows:
+---
 
-> relatedIdentifier &rarr;  relatedIdentifierType:DOI &rarr; relationType:IsPublishedIn &rarr; http://doi.org/10.17616/R3ZX96
+:::tip Standard
+*Research data repositories should provide their repository identifier by re3data.org as a `publisherIdentifier`.*
+:::
+
+To uniquely and persistently identify themselves within the dataset's metadata, repositories should provide **repository identifier from re3data.org**. These should be automatically populated metadata fields. If data has originally been published in another repository, the respective repository identifier should be used.
+
+In the case of RADAR4Chem the relationship would be described as follows (see also [DataCite's documenation on the publisher field](https://datacite-metadata-schema.readthedocs.io/en/4.5/properties/publisher/#publisher)):
+
+>Publisher:RADAR4Chem
+>
+>publisherIdentifier:http://doi.org/10.17616/R3ZX96
+>
+>publisherIdentifierScheme:re3data 
+>
+>schemeURI:https://re3data.org/
+
+```xml
+<publisher xml:lang="en" publisherIdentifier="http://doi.org/10.17616/R3ZX96" publisherIdentifierScheme="re3data" schemeURI="https://re3data.org/">RADAR4Chem</publisher>
+```
 
 This ensures humans as well as machines can trace and interpret where the data has been published.
 
-:::tip Standard
-*Research data repositories should allow researchers to update the metadata of the PID with their dataset.*
-:::
+---
 
 :::tip Standard
-*Research data repositories should allow metadata corrections.*
+*Research data repositories should allow researchers to update the research data's metadata.*
 :::
 
-(version control?) 
+This pertains to **corrections and updates** made both to the PID metadata as well as any other metadata. For full transparency, metadata may be **versioned**. The record may indicate to viewers that changes were made. 
+
+---
 
 :::tip Standard
 *Research data repositories should inform authors and data curators about possible rights conflicts for the abstract field in the DataCite schema*
 :::
 
-Dataset's should have their own description as an abstract. Copying the related text publication abstract can results in a rights conflict with the respective publisher. Authors and data curators should be informed about this conflict when filling out a dataset's metadata.
+Dataset's should have their **own description as an abstract**. Copying the related text publication abstract can results in a **rights conflict** with the respective publisher. Authors and data curators should be informed about this conflict when filling out a dataset's metadata.
+
+---
 
 :::tip Standard
 *In research data repositories, licenses should be grouped in licenses for research data vs. licences for software.*
 :::
 
-Licenses differ for datasets and software. Thus, providing a grouping greatly aids authors in selecting from the correct set. 
+**Licenses** differ for datasets and software. Thus, providing a **grouping** greatly aids authors in selecting from the correct set. 
+
+---
 
 :::tip Standard
 *Research data repositories should guide users to choose a creative commons license while not making the overall landscape too complicated*
 :::
 
-In line with grouping licenses between software and datasets, pointing authors towards the selection of [creative commons (CC)](https://creativecommons.org/) license alleviates the selection process.  
+In line with grouping licenses between software and datasets, pointing authors towards the selection of [**creative commons (CC)**](https://creativecommons.org/) license alleviates the selection process.  
+
+---
 
 :::tip Standard
 *Research data repositories should pre-select licenses such as CC0 or CC BY 4.0 instead of more restrictive licenses such as CC BY-SA 4.0, which might highly complicate reuse.*
 :::
 
-Licenses can be confusing to authors. Shared data should be as open as possible, as closed as necessary with the intend of allowing and enabling others to reuse and build upon the work. Thus, encouraging rather open licences such as [CC0](https://creativecommons.org/public-domain/cc0/) and [CC BY 4.0](https://creativecommons.org/licenses/by/4.0/) as opposed to more restrictive licenses such as [CC BY-SA 4.0](https://creativecommons.org/licenses/by-sa/4.0/) or [CC BY-NC 4.0](https://creativecommons.org/licenses/by-nc/4.0/).
+Licenses can be confusing to authors. Shared data should be as **open as possible, as closed as necessary** with the intent of allowing and enabling others to reuse and build upon the work. Thus, encouraging rather open licences such as **[CC0](https://creativecommons.org/public-domain/cc0/) and [CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)** as opposed to more restrictive licenses such as [CC BY-SA 4.0](https://creativecommons.org/licenses/by-sa/4.0/) or [CC BY-NC 4.0](https://creativecommons.org/licenses/by-nc/4.0/).
 
 ## For Publishers and Journals
 
 :::tip Standard
-*Articles should be linked in their DOI metadata with dataset(s) with relationship_type IsSupplementedBy and the dataset(s) should link with relationType IsSupplementTo.*
+*Articles should be linked within their DOI metadata to dataset(s) with the `relation` `type` `is-supplemented-by` and the dataset(s) should link with `relationType` `IsSupplementTo`.*
 :::
-
-<!--add another for repo side or pull apart (find datacite doc info)-->
 
 This agrees with Crossref's documentation on linking datasets to published items. This establishes a structured link between both DOIs and ensures humans and machine's alike can interpret the relationship between the published objects.
 
@@ -158,9 +183,9 @@ To assist authors in selecting well-established and community-specific repositor
 During manuscript submission, editable templates should be provided to authors. This guides authors in correctly submitting underlying data with their manuscript and effectively communicating how to find and access the data, enabling the FAIR principles.
 
 :::tip Standard
-*Author guidelines of journals should explicitly encourage pre-submission of datasets.*
+*Journal author guidelines should explicitly encourage pre-submission of datasets.*
 :::
-<!--was genau ist hiermit gemeint-->
+
 
 
 *This page is licensed under a Creative Commons Universal ([CC0 1.0](https://creativecommons.org/publicdomain/zero/1.0/deed.en)) Public Domain Dedication International License.*
